# Infera

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/web/: .env.local.example  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/metrics/: page.tsx
apps/web/components/: Composer.tsx  MessageList.tsx  ModelPicker.tsx  Sidebar.tsx
apps/web/lib/: api.ts  models.ts  types.ts  useChat.ts
docs/: architecture.md
infra/clickhouse/init/: .gitkeep  01_inference_logs.sql
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/dashboards/json/: inference_overview.json
infra/grafana/provisioning/datasources/: datasources.yml
infra/k8s/base/: clickhouse-init.yaml  clickhouse.yaml  configmap.yaml  gateway.yaml  ingestion.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  redpanda.yaml  secret.yaml  web.yaml
infra/k8s/overlays/production/: configmap-patch.yaml  ingress-patch.yaml  kustomization.yaml
infra/postgres/init/: .gitkeep
scripts/: dev.sh
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: config.py  db.py  main.py  models.py  schemas.py  sdk_client.py
services/gateway/app/routers/: chat.py  conversations.py  metrics.py
services/gateway/app/services/: chat_service.py  conversation_service.py
services/gateway/tests/: test_metrics.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/app/: clickhouse_writer.py  config.py  consumer.py  main.py  producer.py  redaction.py  schemas.py
services/ingestion/tests/: test_redaction.py
