[project]
name = "infera-gateway"
version = "0.1.0"
description = "Chat API: serves conversations, keeps multi-turn context, and calls the LLM through the Infera SDK."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic-settings>=2.3",
    "clickhouse-connect>=0.7",
    "infera-sdk",
]

[tool.uv.sources]
infera-sdk = { path = "../../packages/infera-sdk", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
