[project]
name = "infera-ingestion"
version = "0.1.0"
description = "Ingestion service: receives inference logs from the SDK, validates them, and produces to Redpanda for the worker to store."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "aiokafka>=0.11",
    "cramjam>=2.8",
    "clickhouse-connect>=0.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "infera-sdk",
]

[tool.uv.sources]
infera-sdk = { path = "../../packages/infera-sdk", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
